Add Swagger.yaml generation on build

--- a/PasswordValidator/PasswordValidator/PasswordValidator.Api.csproj
+++ b/PasswordValidator/PasswordValidator/PasswordValidator.Api.csproj
@@ -7,11 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PasswordValidator.Business\PasswordValidator.Business.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\swagger\v1\" />
+  </ItemGroup>
+
+  <Target Name="OpenAPI" AfterTargets="Build" Condition="$(Configuration)=='Debug'">
+    <Exec Command="dotnet swagger tofile --output $(ProjectDir)wwwroot\swagger\v1\swagger.yaml --yaml $(ProjectDir)$(OutputPath)$(AssemblyName).dll v1" WorkingDirectory="$(ProjectDir)" />
+  </Target>
 </Project>
