Add Swagger hosted on GitHub Pages

--- a/PasswordValidator/PasswordValidator/PasswordValidator.Api.csproj
+++ b/PasswordValidator/PasswordValidator/PasswordValidator.Api.csproj
@@ -19,6 +19,6 @@
   </ItemGroup>
 
   <Target Name="OpenAPI" AfterTargets="Build" Condition="$(Configuration)=='Debug'">
-    <Exec Command="dotnet swagger tofile --output $(ProjectDir)wwwroot\swagger\v1\swagger.yaml --yaml $(ProjectDir)$(OutputPath)$(AssemblyName).dll v1" WorkingDirectory="$(ProjectDir)" />
+    <Exec Command="dotnet swagger tofile --output $(ProjectDir)wwwroot\swagger\v1\swagger.json $(ProjectDir)$(OutputPath)$(AssemblyName).dll v1" WorkingDirectory="$(ProjectDir)" />
   </Target>
 </Project>
